trace_decoder/src/snapshots/trace_decoder__type1__test.snap
---
source: trace_decoder/src/lib.rs
expression: instructions
---
NonEmpty {
    inner: [
        Leaf {
            key: NonEmpty {
                inner: [
                    0,
                ],
            },
            value: NonEmpty {
                inner: [
                    49,
                    50,
                    51,
                    52,
                ],
            },
        },
        Leaf {
            key: NonEmpty {
                inner: [
                    0,
                ],
            },
            value: NonEmpty {
                inner: [
                    49,
                    50,
                    51,
                    52,
                ],
            },
        },
        Branch {
            mask: 48,
        },
        Leaf {
            key: NonEmpty {
                inner: [
                    5,
                ],
            },
            value: NonEmpty {
                inner: [
                    49,
                    50,
                    51,
                    53,
                ],
            },
        },
        Branch {
            mask: 24,
        },
        Extension {
            key: NonEmpty {
                inner: [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    1,
                    2,
                ],
            },
        },
    ],
}
